# scau-cs-homework

./: readme.md
操作系统/SCAU_OS_Courese_Design/: README.md  pubspec.yaml
操作系统/SCAU_OS_Courese_Design/lib/: main.dart
操作系统/SCAU_OS_Courese_Design/linux/: CMakeLists.txt  my_application.cc
数据库/Database_Course_Design_Backend/: .gitignore  CMakeLists.txt  README.md  club_management_system.sql  config.json  config.jsonc  main.cc
数据库/Database_Course_Design_Frontend/: README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json
现代开发技术/MeetingRoomBookingSystem_backend/: README.md  pom.xml
现代开发技术/MeetingRoomBookingSystem_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/: .gitignore  CMakeLists.txt  README.md  main.cpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/include/core/: Course.hpp  Enrollment.hpp  Student.hpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/include/screen/: CourseScreen.hpp  EnrollmentScreen.hpp  StudentScreen.hpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/include/utils/: CourseUtils.hpp  DataLoader.hpp  EnrollmentUtils.hpp  StudentUtils.hpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/src/core/: Course.cpp  Enrollment.cpp  Student.cpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/src/screen/: CourseScreen.cpp  EnrollmentScreen.cpp  StudentScreen.cpp
高级程序语言设计/SCAU_AdvancedProgLang_CourseDesign/src/utils/: CourseUtils.cpp  DataLoader.cpp  EnrollmentUtils.cpp  StudentUtils.cpp
(+193 files in other folders)
